# fancy_einsum

./: .gitignore  LICENSE  README.md  requirements_dev.txt  setup.cfg  upload_to_real_pypi.sh  upload_to_test_pypi.sh
fancy_einsum/: README.md  __init__.py  requirements_dev.txt  test_convert_equation.py  test_jax.py  test_numpy.py  test_torch.py
