[metadata]
name = fancy_einsum
version = 0.0.1
author = Chris MacLeod
author_email = chrism6794@gmail.com
description = Drop-in replacement for torch/numpy einsum, with descriptive variable names in equations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kiv/fancy_einsum
project_urls =
    Bug Tracker = https://github.com/Kiv/fancy_einsum/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = fancy_einsum
packages = find:
python_requires = >=3.6

[options.packages.find]
where = fancy_einsum