[metadata]
name = fancy_einsum
version = 0.0.3
author = Chris MacLeod
author_email = chrism6794@gmail.com
license = MIT
license_file = LICENSE
description = Drop-in replacement for torch/numpy einsum, with descriptive variable names in equations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kiv/fancy_einsum
project_urls =
    Bug Tracker = https://github.com/Kiv/fancy_einsum/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
tests_require = 
    pytest 
